--- a/index.html
+++ b/index.html
@@ -1,229 +1,263 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Joseph Nagothu | Data Analytics Portfolio</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<title>Joseph Nagothu | Data Analytics Portfolio</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <style>
-    * {
-      box-sizing: border-box;
-    }
+<style>
 
-    body {
-      margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-      background-color: white;
-      color: #111;
-    }
+* {
+  box-sizing: border-box;
+}
 
-    .container {
-      display: flex;
-      height: 100vh;
-    }
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+  display: flex;
+  background: linear-gradient(to right, #ffffff 40%, #f8fafc 40%);
+  color: #111;
+}
 
-    /* LEFT SIDE */
-    .left {
-      width: 40%;
-      padding: 80px 60px;
-      position: fixed;
-      height: 100vh;
-      overflow: hidden;
-      background: white;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-    }
+/* LEFT SIDE */
+.left {
+  width: 40%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 60px;
+  background: white;
+}
 
-    .profile-img {
-      width: 200px;
-      height: 200px;
-      border-radius: 50%;
-      object-fit: cover;
-      margin-bottom: 30px;
-    }
+.left-content {
+  text-align: center;
+  max-width: 460px;
+  animation: fadeIn 1s ease forwards;
+}
 
-    h1 {
-      font-size: 40px;
-      margin-bottom: 15px;
-    }
+.profile-pic {
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-bottom: 30px;
+  box-shadow: 0 12px 40px rgba(0,0,0,0.12);
+  transition: transform 0.3s ease;
+}
 
-    .bio {
-      font-size: 18px;
-      line-height: 1.6;
-      color: #555;
-      margin-bottom: 30px;
-      max-width: 400px;
-    }
+.profile-pic:hover {
+  transform: scale(1.03);
+}
 
-    .btn {
-      display: inline-block;
-      padding: 12px 20px;
-      margin-right: 10px;
-      margin-bottom: 10px;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: 600;
-      font-size: 15px;
-    }
+h1 {
+  font-size: 46px;
+  margin: 15px 0;
+  letter-spacing: -1px;
+}
 
-    .btn-primary {
-      background-color: #2563eb;
-      color: white;
-    }
+.bio {
+  font-size: 20px;
+  line-height: 1.7;
+  margin-bottom: 35px;
+  color: #444;
+}
 
-    .btn-secondary {
-      background-color: #e5e7eb;
-      color: #111;
-    }
+.button {
+  display: inline-block;
+  padding: 14px 26px;
+  margin: 8px;
+  background: #2563eb;
+  color: white;
+  text-decoration: none;
+  border-radius: 10px;
+  font-weight: 600;
+  transition: all 0.25s ease;
+  box-shadow: 0 4px 15px rgba(37,99,235,0.3);
+}
 
-    .skills {
-      margin-top: 40px;
-    }
+.button:hover {
+  background: #1e4ed8;
+  transform: translateY(-3px);
+  box-shadow: 0 8px 25px rgba(37,99,235,0.4);
+}
 
-    .skills h3 {
-      font-size: 16px;
-      margin-bottom: 10px;
-      text-transform: uppercase;
-      letter-spacing: 1px;
-      color: #888;
-    }
+.skills {
+  margin-top: 60px;
+  text-align: left;
+}
 
-    .skills p {
-      font-size: 15px;
-      color: #555;
-      line-height: 1.6;
-    }
+.skills h3 {
+  font-size: 17px;
+  margin-bottom: 10px;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+  color: #888;
+}
 
-    /* RIGHT SIDE */
-    .right {
-      width: 60%;
-      margin-left: 40%;
-      padding: 80px 80px;
-      height: 100vh;
-      overflow-y: auto;
-      background: white;
-    }
+.skills p {
+  line-height: 1.7;
+  color: #555;
+  font-size: 15px;
+}
 
-    .section-title {
-      font-size: 28px;
-      margin-bottom: 40px;
-    }
+/* RIGHT SIDE */
+.right {
+  width: 60%;
+  padding: 80px;
+  overflow-y: auto;
+  background: #f8fafc;
+}
 
-    .project {
-      margin-bottom: 60px;
-    }
+.section-title {
+  font-size: 32px;
+  margin-bottom: 50px;
+  font-weight: 700;
+  animation: fadeIn 1.2s ease forwards;
+}
 
-    .project img {
-      width: 100%;
-      border-radius: 12px;
-      margin-bottom: 20px;
-    }
+.project {
+  background: white;
+  padding: 30px;
+  border-radius: 16px;
+  margin-bottom: 60px;
+  box-shadow: 0 15px 40px rgba(0,0,0,0.05);
+  transition: all 0.3s ease;
+  animation: fadeUp 0.8s ease forwards;
+}
 
-    .project h2 {
-      font-size: 22px;
-      margin-bottom: 10px;
-    }
+.project:hover {
+  transform: translateY(-6px);
+  box-shadow: 0 20px 60px rgba(0,0,0,0.08);
+}
 
-    .project p {
-      color: #555;
-      line-height: 1.6;
-      margin-bottom: 15px;
-    }
+.project img {
+  width: 100%;
+  border-radius: 12px;
+  margin-bottom: 20px;
+  transition: transform 0.4s ease;
+}
 
-    .footer {
-      margin-top: 60px;
-      color: #888;
-      font-size: 14px;
-    }
+.project:hover img {
+  transform: scale(1.02);
+}
 
-    /* Responsive */
-    @media(max-width: 1000px) {
-      .container {
-        flex-direction: column;
-      }
+.project h2 {
+  font-size: 24px;
+  margin-bottom: 12px;
+}
 
-      .left {
-        position: relative;
-        width: 100%;
-        height: auto;
-        padding: 50px 30px;
-      }
+.project p {
+  color: #555;
+  line-height: 1.7;
+  font-size: 16px;
+  margin-bottom: 20px;
+}
 
-      .right {
-        width: 100%;
-        margin-left: 0;
-        height: auto;
-        padding: 50px 30px;
-      }
-    }
+.project-buttons a {
+  margin-right: 10px;
+}
 
-  </style>
+/* ANIMATIONS */
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+
+@keyframes fadeUp {
+  from {
+    opacity: 0;
+    transform: translateY(25px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+/* MOBILE */
+@media (max-width: 1000px) {
+  body {
+    flex-direction: column;
+    background: white;
+  }
+
+  .left, .right {
+    width: 100%;
+    height: auto;
+  }
+
+  .left {
+    padding: 60px 20px;
+  }
+
+  .right {
+    padding: 40px 20px;
+    background: white;
+  }
+}
+
+</style>
 </head>
 
 <body>
 
-<div class="container">
-
-  <!-- LEFT PANEL -->
-  <div class="left">
-    <img src="profile.jpg" class="profile-img">
+<div class="left">
+  <div class="left-content">
+    <img src="profile.jpg" class="profile-pic">
 
     <h1>Joseph Nagothu</h1>
 
-    <p class="bio">
+    <div class="bio">
       Business Analytics graduate student focused on performance measurement,
-      cost optimization, marketing analytics, and data-driven strategy.
-    </p>
-
-    <div>
-      <a href="https://www.linkedin.com/in/joseph-nagothu-50a493355/" target="_blank" class="btn btn-primary">LinkedIn</a>
-      <a href="Joseph_Nagothu_Resume.pdf" target="_blank" class="btn btn-secondary">Download Resume</a>
+      cost optimization, marketing analytics, and strategic data-driven decision making.
     </div>
+
+    <a href="https://www.linkedin.com/in/joseph-nagothu-50a493355/" class="button" target="_blank">LinkedIn</a>
+    <a href="Joseph_Nagothu_Resume.pdf" class="button" target="_blank">Download Resume</a>
 
     <div class="skills">
       <h3>Technical Skills</h3>
       <p>
         Python (Pandas, Plotly, Streamlit)<br>
         KPI & Performance Reporting<br>
-        Marketing & Media Analytics<br>
+        Marketing & Media Analytics (CPA, ROAS, Conversion Rate)<br>
         Cost Modeling & Financial Analysis
       </p>
     </div>
   </div>
+</div>
 
+<div class="right">
 
-  <!-- RIGHT PANEL -->
-  <div class="right">
+  <div class="section-title">Selected Projects</div>
 
-    <h2 class="section-title">Selected Projects</h2>
+  <div class="project">
+    <img src="campaign.png">
+    <h2>Campaign Performance & Optimization Dashboard</h2>
+    <p>
+      Executive analytics dashboard evaluating campaign effectiveness,
+      conversion rates, channel performance, and simulated media spend allocation.
+    </p>
 
-    <div class="project">
-      <img src="campaign.png">
-      <h2>Campaign Performance & Optimization Dashboard</h2>
-      <p>
-        Executive-level analytics dashboard evaluating campaign conversion,
-        audience engagement, channel performance, and simulated budget allocation.
-      </p>
-      <a href="https://campaign-performance-dashboard-cqjisa75dlk3sdi5xpekk7.streamlit.app/" target="_blank" class="btn btn-primary">Live Dashboard</a>
-      <a href="https://github.com/josephn24/campaign-dashboard" target="_blank" class="btn btn-secondary">GitHub Repo</a>
+    <div class="project-buttons">
+      <a href="https://campaign-performance-dashboard-cqjisa75dlk3sdi5xpekk7.streamlit.app/" class="button" target="_blank">Live Dashboard</a>
+      <a href="https://github.com/josephn24/campaign-performance-dashboard" class="button" target="_blank">GitHub</a>
     </div>
+  </div>
 
-    <div class="project">
-      <img src="coffee.png">
-      <h2>Coffee Shop Cost Optimization Dashboard</h2>
-      <p>
-        Operational analytics tool analyzing revenue drivers, ingredient costs,
-        labor impact, and profit margins to identify cost-saving opportunities.
-      </p>
-      <a href="https://coffeeshop-dse4qsnm2gdwo5nltq7zbt.streamlit.app/" target="_blank" class="btn btn-primary">Live Dashboard</a>
-      <a href="https://github.com/josephn24/coffee-dashboard" target="_blank" class="btn btn-secondary">GitHub Repo</a>
+  <div class="project">
+    <img src="coffee.png">
+    <h2>Coffee Shop Cost Optimization Dashboard</h2>
+    <p>
+      Operational analytics dashboard analyzing revenue drivers, ingredient costs,
+      labor impact, and profit margins to identify cost-saving opportunities.
+    </p>
+
+    <div class="project-buttons">
+      <a href="https://coffeeshop-dse4qsnm2gdwo5nltq7zbt.streamlit.app/" class="button" target="_blank">Live Dashboard</a>
+      <a href="https://github.com/josephn24/coffee-shop-dashboard" class="button" target="_blank">GitHub</a>
     </div>
-
-    <div class="footer">
-      © 2025 Joseph Nagothu
-    </div>
-
   </div>
 
 </div>
