--- a/index.html
+++ b/index.html
@@ -15,34 +15,37 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
   display: flex;
-  background: linear-gradient(to right, #ffffff 40%, #f8fafc 40%);
+  height: 100vh;
+  overflow: hidden; /* prevents whole page scroll */
   color: #111;
 }
 
-/* LEFT SIDE */
+/* LEFT SIDE (FIXED) */
 .left {
   width: 40%;
   height: 100vh;
+  position: fixed;
+  left: 0;
+  top: 0;
+  background: white;
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 60px;
-  background: white;
 }
 
 .left-content {
   text-align: center;
   max-width: 460px;
-  animation: fadeIn 1s ease forwards;
 }
 
 .profile-pic {
-  width: 250px;
-  height: 250px;
+  width: 260px;
+  height: 260px;
   border-radius: 50%;
   object-fit: cover;
   margin-bottom: 30px;
-  box-shadow: 0 12px 40px rgba(0,0,0,0.12);
+  box-shadow: 0 15px 45px rgba(0,0,0,0.12);
   transition: transform 0.3s ease;
 }
 
@@ -51,7 +54,7 @@ body {
 }
 
 h1 {
-  font-size: 46px;
+  font-size: 48px;
   margin: 15px 0;
   letter-spacing: -1px;
 }
@@ -59,71 +62,91 @@ h1 {
 .bio {
   font-size: 20px;
   line-height: 1.7;
-  margin-bottom: 35px;
+  margin-bottom: 30px;
   color: #444;
 }
 
-.button {
+/* ICON ROW */
+.icon-row {
+  margin-bottom: 30px;
+}
+
+.icon-link {
+  margin: 0 12px;
   display: inline-block;
-  padding: 14px 26px;
-  margin: 8px;
+  transition: transform 0.25s ease;
+}
+
+.icon-link img {
+  width: 32px;
+  height: 32px;
+}
+
+.icon-link:hover {
+  transform: translateY(-4px);
+}
+
+/* Resume button */
+.resume-btn {
+  display: inline-block;
+  padding: 12px 24px;
   background: #2563eb;
   color: white;
   text-decoration: none;
-  border-radius: 10px;
+  border-radius: 8px;
   font-weight: 600;
   transition: all 0.25s ease;
   box-shadow: 0 4px 15px rgba(37,99,235,0.3);
 }
 
-.button:hover {
+.resume-btn:hover {
   background: #1e4ed8;
   transform: translateY(-3px);
-  box-shadow: 0 8px 25px rgba(37,99,235,0.4);
 }
 
+/* Skills */
 .skills {
-  margin-top: 60px;
+  margin-top: 50px;
   text-align: left;
 }
 
 .skills h3 {
-  font-size: 17px;
-  margin-bottom: 10px;
+  font-size: 16px;
+  margin-bottom: 12px;
   letter-spacing: 1.5px;
   text-transform: uppercase;
   color: #888;
 }
 
 .skills p {
-  line-height: 1.7;
+  line-height: 1.8;
   color: #555;
   font-size: 15px;
 }
 
-/* RIGHT SIDE */
+/* RIGHT SIDE (SCROLLABLE ONLY) */
 .right {
+  margin-left: 40%;
   width: 60%;
-  padding: 80px;
+  height: 100vh;
   overflow-y: auto;
-  background: #f8fafc;
+  padding: 80px;
+  background: white;
 }
 
 .section-title {
   font-size: 32px;
   margin-bottom: 50px;
   font-weight: 700;
-  animation: fadeIn 1.2s ease forwards;
 }
 
 .project {
-  background: white;
+  background: #ffffff;
   padding: 30px;
   border-radius: 16px;
   margin-bottom: 60px;
   box-shadow: 0 15px 40px rgba(0,0,0,0.05);
   transition: all 0.3s ease;
-  animation: fadeUp 0.8s ease forwards;
 }
 
 .project:hover {
@@ -154,46 +177,40 @@ h1 {
   margin-bottom: 20px;
 }
 
-.project-buttons a {
+.button {
+  display: inline-block;
+  padding: 12px 22px;
   margin-right: 10px;
+  background: #2563eb;
+  color: white;
+  text-decoration: none;
+  border-radius: 8px;
+  font-weight: 600;
+  transition: all 0.25s ease;
 }
 
-/* ANIMATIONS */
-@keyframes fadeIn {
-  from { opacity: 0; }
-  to { opacity: 1; }
-}
-
-@keyframes fadeUp {
-  from {
-    opacity: 0;
-    transform: translateY(25px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
+.button:hover {
+  background: #1e4ed8;
+  transform: translateY(-3px);
 }
 
 /* MOBILE */
 @media (max-width: 1000px) {
   body {
     flex-direction: column;
-    background: white;
+    overflow: auto;
   }
 
-  .left, .right {
+  .left {
+    position: relative;
     width: 100%;
     height: auto;
   }
 
-  .left {
-    padding: 60px 20px;
-  }
-
   .right {
-    padding: 40px 20px;
-    background: white;
+    margin-left: 0;
+    width: 100%;
+    height: auto;
   }
 }
 
@@ -204,27 +221,37 @@ h1 {
 
 <div class="left">
   <div class="left-content">
+
     <img src="profile.jpg" class="profile-pic">
 
     <h1>Joseph Nagothu</h1>
 
     <div class="bio">
       Business Analytics graduate student focused on performance measurement,
-      cost optimization, marketing analytics, and strategic data-driven decision making.
+      cost optimization, marketing analytics, and strategic data-driven strategy.
     </div>
 
-    <a href="https://www.linkedin.com/in/joseph-nagothu-50a493355/" class="button" target="_blank">LinkedIn</a>
-    <a href="Joseph_Nagothu_Resume.pdf" class="button" target="_blank">Download Resume</a>
+    <div class="icon-row">
+      <a href="https://www.linkedin.com/in/joseph-nagothu-50a493355/" target="_blank" class="icon-link">
+        <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png">
+      </a>
+    </div>
+
+    <a href="Joseph_Nagothu_Resume.pdf" target="_blank" class="resume-btn">Resume</a>
 
     <div class="skills">
       <h3>Technical Skills</h3>
       <p>
         Python (Pandas, Plotly, Streamlit)<br>
+        SQL & Database Querying<br>
+        SPSS & Statistical Modeling<br>
         KPI & Performance Reporting<br>
         Marketing & Media Analytics (CPA, ROAS, Conversion Rate)<br>
+        Monte Carlo Simulation & Forecast Modeling<br>
         Cost Modeling & Financial Analysis
       </p>
     </div>
+
   </div>
 </div>
 
@@ -239,11 +266,8 @@ h1 {
       Executive analytics dashboard evaluating campaign effectiveness,
       conversion rates, channel performance, and simulated media spend allocation.
     </p>
-
-    <div class="project-buttons">
-      <a href="https://campaign-performance-dashboard-cqjisa75dlk3sdi5xpekk7.streamlit.app/" class="button" target="_blank">Live Dashboard</a>
-      <a href="https://github.com/josephn24/campaign-performance-dashboard" class="button" target="_blank">GitHub</a>
-    </div>
+    <a href="https://campaign-performance-dashboard-cqjisa75dlk3sdi5xpekk7.streamlit.app/" class="button" target="_blank">Live Dashboard</a>
+    <a href="https://github.com/josephn24/campaign-performance-dashboard" class="button" target="_blank">GitHub</a>
   </div>
 
   <div class="project">
@@ -253,11 +277,8 @@ h1 {
       Operational analytics dashboard analyzing revenue drivers, ingredient costs,
       labor impact, and profit margins to identify cost-saving opportunities.
     </p>
-
-    <div class="project-buttons">
-      <a href="https://coffeeshop-dse4qsnm2gdwo5nltq7zbt.streamlit.app/" class="button" target="_blank">Live Dashboard</a>
-      <a href="https://github.com/josephn24/coffee-shop-dashboard" class="button" target="_blank">GitHub</a>
-    </div>
+    <a href="https://coffeeshop-dse4qsnm2gdwo5nltq7zbt.streamlit.app/" class="button" target="_blank">Live Dashboard</a>
+    <a href="https://github.com/josephn24/coffee-shop-dashboard" class="button" target="_blank">GitHub</a>
   </div>
 
 </div>
